# solana-pinocchio-starter

program/: Cargo.toml
program/benches/: compute_units.md  compute_units.rs
program/src/: entrypoint.rs  error.rs  lib.rs
program/src/instruction/: initialize_mystate.rs  mod.rs  update_mystate.rs
program/src/state/: my_state.rs
program/tests/: unit_tests.rs
